[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"

easy-fs = { path = "../easy-fs" }
riscv = { path = "../third-party/riscv", features = ["inline-asm"] }
virtio-drivers = { path = "../third-party/virtio-drivers" }
k210-pac = { path = "../third-party/k210-pac" }
k210-hal = { path = "../third-party/k210-hal" }
k210-soc = { path = "../third-party/k210-soc" }

[features]
board_qemu = []
board_k210 = []
