[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
bitflags = "1.2.1"

[profile.release]
debug = true
# opt-level=0
# split-debuginfo="unpacked"
debuginfo-level = 1

# Debuginfo level for the compiler.
debuginfo-level-rustc = 2

[features]
board_qemu = []
board_k210 = []